ACLOCAL_AMFLAGS = -I m4 --install

SUBDIRS = src 
EXTRA_DIST = campagnol.conf
EXTRA_DIST += include/bss_fifo.h include/campagnol.h include/communication.h include/configuration.h include/net_socket.h include/peer.h include/pthread_wrap.h include/tun_device.h include/log.h include/sem_wrap.h include/config_parser.h
EXTRA_DIST += samples/cert1/key.pem samples/cert1/certificate.pem samples/cert2/key.pem samples/cert2/certificate.pem samples/cacert.pem samples/client1.conf samples/client2.conf samples/crl.pem samples/cert_revoked/key.pem samples/cert_revoked/certificate.pem samples/README
#EXTRA_DIST = $(shell find include samples -type f ! -path '*.svn*') campagnol.conf
