ACLOCAL_AMFLAGS = -I m4 --install

SUBDIRS = src man samples 
EXTRA_DIST = campagnol.conf
EXTRA_DIST += include/bss_fifo.h include/campagnol.h include/communication.h include/configuration.h include/net_socket.h include/peer.h include/pthread_wrap.h include/tun_device.h include/log.h include/sem_wrap.h include/config_parser.h
