samplesdir=$(pkgdatadir)/samples
nobase_dist_samples_DATA = sample_certs/cert1/key.pem sample_certs/cert1/certificate.pem \
	sample_certs/cert2/key.pem sample_certs/cert2/certificate.pem \
	sample_certs/cert_revoked/key.pem sample_certs/cert_revoked/certificate.pem \
	sample_certs/cacert.pem sample_certs/crl.pem \
	sample_certs/client1.conf sample_certs/client2.conf \
	sample_certs/README \
	ca_wrap.sh README.ca_wrap
