ACLOCAL_AMFLAGS = -I m4 --install

SUBDIRS = src man samples 
dist_sysconf_DATA = campagnol.conf
EXTRA_DIST = include/bf_rate_limiter.h include/bss_fifo.h include/campagnol.h include/communication.h include/config_parser.h include/configuration.h include/getline.h include/log.h include/net_socket.h include/peer.h include/pthread_wrap.h include/rate_limiter.h include/sem_wrap.h include/tdestroy.h include/tun_device.h
